<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="10dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:paddingBottom="60dp"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/camera_btn"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            style="@style/TransparentDialog"/>

        <TextView
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/camera"/>

    </LinearLayout>

    <LinearLayout
        android:paddingBottom="10dp"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:layout_gravity="center"
            android:id="@+id/gallery_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gallery"
            style="@style/TransparentDialog"/>

        <TextView
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"/>

      </LinearLayout>

    </LinearLayout>

</LinearLayout>