<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.SignIn">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="244dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_logo_linear" />

    <LinearLayout
        android:id="@+id/pass_layout"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true">

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/username_layout"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email"
            android:layout_width="244dp"
            android:layout_height="45dp"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:hint="@string/email"
            android:textColor="@color/splashbg"
            android:textSize="12sp"
            android:inputType="textEmailAddress"
            android:background="@drawable/ic_login_edit_text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="30dp"
            app:passwordToggleEnabled="true"
            android:id="@+id/password_layout"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

    <EditText
        android:id="@+id/password"
        android:layout_width="244dp"
        android:layout_height="45dp"
        android:hint="@string/pwd"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/splashbg"
        android:textSize="12sp"
        android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="12sp"
                android:text="@string/forgot"/>

            <Button
                android:id="@+id/login"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginStart="47dp"
                android:background="@drawable/ic_login_btnbg"
                android:text="Login"
                android:textAllCaps="false"
                android:textColor="@color/splashbg"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/social_signup_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/pass_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/sign_up"
        android:textColor="@color/splashbg"/>

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="12sp"
         android:layout_marginStart="8sp"
         android:layout_marginEnd="8sp"
         android:text="/"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/social"/>

    </LinearLayout>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
    android:layout_below="@id/social_signup_layout">

    <FrameLayout
        android:id="@+id/FrameLayout1"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:focusable="true">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/custom_fb"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/fb_btn_bg"
            android:src="@drawable/ic_facebook_logo"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textStyle="bold"/>

    </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/or"/>

        <ImageButton
            android:id="@+id/custom_gg"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/gg_btn_bg"
            android:src="@drawable/ic_google_plus"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textStyle="bold"
            android:focusable="true" />

    </LinearLayout>

</RelativeLayout>